Fix homepage link to valid output page (site 2)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Software Error Explanations</h1>
     <p>Select an error to learn its meaning and how to fix it.</p>
     <ul>
-        <li><a href="output/">Browse all error pages</a></li>
+        <li><a href="output/ffmpeg-command-explained.html">Browse all error pages</a></li>
     </ul>
 </body>
 </html>
