--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Software Error Explanations</title>
     <meta name="google-site-verification" content="LDhYXdX2D0U2KB5hGM3J0sli5e6iN8CKkPdPu6u-fdI">
 </head>
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://Khalem-cpu.github.io/seo-machine-cli/">
 <body>
     <h1>Software Error Explanations</h1>
     <p>Select an error to learn its meaning and how to fix it.</p>
